# pipemedic

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: README.md  run_evals.py
evals/project/: dbt_project.yml  profiles.yml
evals/project/models/: schema.yml  stg_orders.sql
evals/scenarios/001-column-rename/: expected.yml
src/dbt_medic/: __init__.py  agent.py  cli.py  collector.py  config.py  graph.py  models.py  publisher.py  tools.py  validator.py
src/dbt_medic/airflow/: __init__.py  callback.py
src/pipemedic/: __init__.py  agent.py  branch.py  cli.py  collector.py  config.py  graph.py  publisher.py  tools.py  validator.py
src/pipemedic/airflow/: __init__.py  callback.py
tests/: test_agent.py  test_branch.py  test_callback.py  test_cli.py  test_collector.py  test_config.py  test_evals.py  test_graph.py  test_models.py  test_publisher.py  test_tools.py  test_validator.py
