[project]
name = "pipemedic"
version = "0.1.0"
description = "Autonomous AI data engineer that fixes broken dbt pipelines and opens PRs with validated fixes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-anthropic",
    "langchain-core",
    "anthropic",
    "pydantic",
    "PyGithub",
    "dbt-core",
    "dbt-databricks",
    "databricks-sdk",
    "pyyaml",
]

[project.scripts]
pipemedic = "pipemedic.cli:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipemedic"]
